--- a/夹门模具设计360✘200骨架板或330✘200骨架板.md
+++ b/夹门模具设计360✘200骨架板或330✘200骨架板.md
@@ -1,3 +1,6 @@
+2022/11/17
+
+
 360✘200骨架板或330✘200骨架板
 
 用8里或者11里多层板，截出骨架板，
@@ -23,12 +26,20 @@
 用8里或者11里多层板，截出骨架板，
 
 
+
+
 夹门木条和修边机挡条都安装在骨架板上，
 
 
 360✘200骨架板或了330ⅹ200骨架板，
 
 
-夹门木条标线固定，200中心线是100
+夹门木条标线固定，200中心线是100，
+
+
+
+2022/11/17
+
+
 
 
