Update and rename 2022,开槽口，槽口印对线，分两次对线，标记测试.txt to 2022,开槽口，槽口印对线，分两次对线，标记测试.md

--- a/2022,开槽口，槽口印对线，分两次对线，标记测试.md
+++ b/2022,开槽口，槽口印对线，分两次对线，标记测试.md
@@ -1,4 +1,4 @@
-对完下线对上线，分两次对线，
+8对完下线对上线，分两次对线，
 
 开槽口印对线，分两次对线，
 
@@ -32,6 +32,18 @@
 调试好之后左边固定死，右边移动，区分上下左右，
 
 防止移动，
+
+
+
+夹门木条和修边机挡条都是左边固定，右边定位移动，
+
+用踢脚线卡扣卡上6#螺母，螺丝穿透，就是踢脚线卡扣定位器了，
+
+踢脚线卡扣定位器，单一方向定位夹门木条，
+
+踢脚线卡扣定位器，左右方向互相定位修边机挡条，
+
+
 
 2022/11/22
 
