--- a/2022,开槽口，槽口印对线，分两次对线，标记测试.md
+++ b/2022,开槽口，槽口印对线，分两次对线，标记测试.md
@@ -1,4 +1,4 @@
-
+*
 对完下线对上线，分两次对线，
 
 开槽口印对线，分两次对线，
@@ -42,11 +42,18 @@
 
 踢脚线卡扣定位器，单一方向定位夹门木条，
 
-踢脚线卡扣定位器，左右方向互相定位修边机挡条，
+
+踢脚线卡扣定位器，双向定位，
+
+
+左右方向互相定位修边机挡条，
 
 
 
 2022/11/22
+
+
+
 
 
 
