--- a/2022,开槽口，槽口印对线，分两次对线，标记测试.md
+++ b/2022,开槽口，槽口印对线，分两次对线，标记测试.md
@@ -38,12 +38,15 @@
 
 夹门木条和修边机挡条都是左边固定，右边定位移动，
 
+
+然后安装卡扣式定位推进器，
+
 用踢脚线卡扣卡上6#螺母，螺丝穿透，就是踢脚线卡扣定位器了，
 
 踢脚线卡扣定位器，单一方向定位夹门木条，
 
 
-踢脚线卡扣定位器，双向定位，
+踢脚线卡扣定位器(定位推进器)双向定位，
 
 
 左右方向互相定位修边机挡条，
